@@ -62,10 +62,17 @@ AC_DEFUN([GNOME_INIT_OBJC],
 	if test -f $my_gnome_libdir/obGnomeConf.sh; then
 	    . $my_gnome_libdir/obGnomeConf.sh
 	    AC_MSG_RESULT(found $my_gnome_libdir)
+	    ac_cv_have_gnome_objc=yes
 	else
 	    AC_MSG_RESULT(not found)
 	    AC_MSG_WARN(Could not find the obGnomeConf.sh file that is generated by gnome-objc install)
+	    ac_cv_have_gnome_objc=no
 	fi
+	
+	dnl Add a conditional on whether or not we have gnome-objc
+	AM_CONDITIONAL(HAVE_GNOME_OBJC, test x$ac_cv_have_gnome_objc = xyes)
+	HAVE_GNOME_OBJC=$ac_cv_have_gnome_objc
+
 	AC_SUBST(OBGNOME_INCLUDEDIR)
 	AC_SUBST(OBGNOME_LIBS)
 	AC_SUBST(OBGTK_LIBS)
